# opencv_contrib

./: LICENSE
.github/workflows/: PR-5.x.yaml
modules/aruco/: CMakeLists.txt
modules/aruco/test/: test_aruco_tutorial.cpp
modules/ccalib/samples/: omnidir-calibration-testdata.cpp
modules/ccalib/src/: omnidir.cpp
modules/ccalib/test/: test_omnidir.cpp
modules/cudacodec/src/: ffmpeg_video_source.cpp  video_writer.cpp
modules/hfs/: CMakeLists.txt
modules/hfs/src/: hfs_core.cpp  hfs_core.hpp
modules/mudev/: CMakeLists.txt
modules/mudev/src/: stub.cpp
modules/mudev/test/: CMakeLists.txt  test_arithm_func.mu  test_arithm_op.mu  test_bitwize_op.mu  test_cmp_op.mu  test_color_cvt.mu  test_cvt.mu  test_deriv.mu  test_integral.mu  test_lut.mu  test_nd.mu  test_precomp.hpp  test_pyramids.mu  test_reduction.mu  test_scan.mu  test_split_merge.mu  test_warp.mu  transpose.mu
modules/musaarithm/: CMakeLists.txt
modules/musaarithm/perf/: perf_arithm.cpp  perf_core.cpp  perf_element_operations.cpp  perf_main.cpp  perf_precomp.hpp  perf_reductions.cpp
modules/musaarithm/src/: arithm.cpp  core.cpp  element_operations.cpp  lut.cpp  lut.hpp  precomp.hpp  reductions.cpp
modules/musaarithm/test/: test_arithm.cpp  test_buffer_pool.cpp  test_core.cpp  test_element_operations.cpp  test_event.cpp  test_gpumat.cpp  test_opengl.cpp  test_precomp.hpp  test_reductions.cpp  test_stream.cpp
modules/musabgsegm/: CMakeLists.txt
modules/musabgsegm/perf/: perf_bgsegm.cpp  perf_main.cpp  perf_precomp.hpp
modules/musabgsegm/src/: mog.cpp  mog2.cpp  precomp.hpp
modules/musabgsegm/test/: test_bgsegm.cpp  test_precomp.hpp
modules/musacodec/: CMakeLists.txt
modules/musacodec/perf/: perf_main.cpp  perf_precomp.hpp  perf_video.cpp
modules/musacodec/src/: cuvid_video_source.cpp  cuvid_video_source.hpp  ffmpeg_video_source.cpp  ffmpeg_video_source.hpp  frame_queue.cpp  frame_queue.hpp  precomp.hpp  thread.cpp  thread.hpp  video_decoder.cpp  video_decoder.hpp  video_parser.cpp  video_parser.hpp  video_reader.cpp  video_source.cpp  video_source.hpp  video_writer.cpp
modules/musacodec/test/: test_precomp.hpp  test_video.cpp
modules/musafeatures2d/: CMakeLists.txt
modules/musafeatures2d/perf/: perf_features2d.cpp  perf_main.cpp  perf_precomp.hpp
modules/musafeatures2d/src/: brute_force_matcher.cpp  fast.cpp  feature2d_async.cpp  orb.cpp  precomp.hpp
modules/musafeatures2d/test/: test_features2d.cpp  (+1 more)
modules/musafilters/: CMakeLists.txt
modules/musaimgproc/: CMakeLists.txt
modules/musalegacy/: CMakeLists.txt
modules/musaobjdetect/: CMakeLists.txt
modules/musaoptflow/: CMakeLists.txt
modules/musastereo/: CMakeLists.txt
modules/musawarping/: CMakeLists.txt
modules/superres/: CMakeLists.txt
modules/videostab/: CMakeLists.txt
modules/xfeatures2d/: CMakeLists.txt
(+372 files in other folders)
